--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="shortcut icon" href="/logo/AAA.png" type="image/x-icon">
+    <link rel="shortcut icon" href="AAA.png" type="image/x-icon">
   </head>
   <body>
     <div class="Enter">
-      <img src="/logo/AAA.png" alt="AAA-Enterprises" />
+      <img src="AAA.png" alt="AAA-Enterprises" />
       <div class="En">
         <h1>AAA POWER ENTERPRISES</h1>
         <h3>
@@ -42,13 +42,13 @@
 
         <ul class="nav-menu">
           <li class="nav-item">
-            <a href="/Html/index.html" class="nav-link">Home</a>
+            <a href="index.html" class="nav-link">Home</a>
           </li>
-          <li class="nav-item"><a href="/Html/aa.html" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="aa.html" class="nav-link">About</a></li>
           <li class="nav-item">
-            <a href="/Services/service.html" class="nav-link">Services</a>
+            <a href="service.html" class="nav-link">Services</a>
           </li>
-          <li class="nav-item"><a href="/Html/contactus.html" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="contactus.html" class="nav-link">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -117,31 +117,31 @@
         <button class="slider-btn prev-btn">❮</button>
         <div class="slider-track">
           <div class="sl">
-            <img src="/logo/elect.avif" alt="Electrician" />
+            <img src="elect.avif" alt="Electrician" />
             <h3>Electricals</h3>
           </div>
           <div class="sl">
-            <img src="/logo/net.jpg" alt="Networking" />
+            <img src="net.jpg" alt="Networking" />
             <h3>Networking</h3>
           </div>
           <div class="sl">
-            <img src="/logo/tiles.avif" alt="Tiles" />
+            <img src="tiles.avif" alt="Tiles" />
             <h3>Tiles</h3>
           </div>
           <div class="sl">
-            <img src="/logo/plaster.jpg" alt="Plaster" />
+            <img src="plaster.jpg" alt="Plaster" />
             <h3>Plaster</h3>
           </div>
           <div class="sl">
-            <img src="/logo/hvac.jpg" alt="Hvac" />
+            <img src="hvac.jpg" alt="Hvac" />
             <h3>HVAC</h3>
           </div>
           <div class="sl">
-            <img src="/logo/ff.jpg" alt="FIre" />
+            <img src="ff.jpg" alt="FIre" />
             <h3>Fire Fightig System</h3>
           </div>
           <div class="sl">
-            <img src="/logo/cc.avif" alt="ConStruction" />
+            <img src="cc.avif" alt="ConStruction" />
             <h3>ConStruction</h3>
           </div>
           <!-- Add more .sl blocks if needed -->
@@ -217,7 +217,7 @@
       <div class="cards-container">
         <!-- Card 1 -->
         <div class="card">
-          <img src="/logo/elect.avif" alt="Electrician" class="card-img" />
+          <img src="elect.avif" alt="Electrician" class="card-img" />
           <div class="card-content">
             <h3 class="card-title">Electrical Services</h3>
             <p class="card-text">
@@ -230,7 +230,7 @@
 
         <!-- Card 2 -->
         <div class="card">
-          <img src="/logo/plum1.jpg" alt="Plumbing" class="card-img" />
+          <img src="plum1.jpg" alt="Plumbing" class="card-img" />
           <div class="card-content">
             <h3 class="card-title">Plumbing Solutions</h3>
             <p class="card-text">
@@ -243,7 +243,7 @@
 
         <!-- Card 3 -->
         <div class="card">
-          <img src="/logo/hbac.jpg" alt="HVAC" class="card-img" />
+          <img src="hbac.jpg" alt="HVAC" class="card-img" />
           <div class="card-content">
             <h3 class="card-title">HVAC Maintenance</h3>
             <p class="card-text">
@@ -256,7 +256,7 @@
 
         <!-- Card 4 -->
         <div class="card">
-          <img src="/logo/home.jpg" alt="Renovation" class="card-img" />
+          <img src="home.jpg" alt="Renovation" class="card-img" />
           <div class="card-content">
             <h3 class="card-title">Home Renovation</h3>
             <p class="card-text">
@@ -372,10 +372,10 @@
         <div class="footer-col">
           <h3>Quick Links</h3>
           <ul class="footer-links">
-            <li><a href="/Html/index.html">Home</a></li>
-            <li><a href="/Services/service.html">Services</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="service.html">Services</a></li>
+            <li><a href="aa.html">About</a></li>
+            <li><a href="contactus.html">Contact</a></li>
           </ul>
         </div>
 
@@ -407,7 +407,7 @@
             </li>
             <li>
               <i class="fas fa-envelope"></i>
-              <span>info@yourcompany.com</span>
+              <span>adeelkhan8062@gmail.com</span>
             </li>
             <li>
               <i class="fas fa-clock"></i>
@@ -425,6 +425,6 @@
       </div>
     </footer>
 
-    <script src="/js/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
