--- a/contactus.html
+++ b/contactus.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactus - AAA Power Enterprises</title>
-    <link rel="stylesheet" href="/css/contactus.css">
-    <link rel="shortcut icon" href="/logo/AAA.png" type="image/x-icon">
+    <link rel="stylesheet" href="contactus.css">
+    <link rel="shortcut icon" href="AAA.png" type="image/x-icon">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
   />
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="Enter">
-        <img src="/logo/AAA.png" alt="AAA-Enterprises" />
+        <img src="AAA.png" alt="AAA-Enterprises" />
         <div class="En">
           <h1>AAA POWER ENTERPRISES</h1>
           <h3>Add- Shop No.68, Sattar Auto Garrage, Sant Mary Church Road, Kalina Donger, Santacruz East, Mumbai 400029</h3>
@@ -30,10 +30,10 @@
             <span class="bar"></span>
           </div>
           <ul class="nav-menu">
-            <li class="nav-item"><a href="/Html/index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="/Html/aa.html" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="/Services/service.html" class="nav-link">Services</a></li>
-            <li class="nav-item"><a href="/Html/contactus.html" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="aa.html" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="service.html" class="nav-link">Services</a></li>
+            <li class="nav-item"><a href="contactus.html" class="nav-link">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -123,10 +123,10 @@
           <div class="footer-col">
             <h3>Quick Links</h3>
             <ul class="footer-links">
-              <li><a href="/Html/index.html">Home</a></li>
-              <li><a href="/Services/service.html">Services</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="service.html">Services</a></li>
+              <li><a href="aa.html">About</a></li>
+              <li><a href="contactus.html">Contact</a></li>
             </ul>
           </div>
   
@@ -158,7 +158,7 @@
               </li>
               <li>
                 <i class="fas fa-envelope"></i>
-                <span>info@yourcompany.com</span>
+                <span>adeelkhan8062@gmail.com</span>
               </li>
               <li>
                 <i class="fas fa-clock"></i>
@@ -178,6 +178,6 @@
   
     
 
-    <script src="/js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
