--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Services - AAA Power Enterprises</title>
-  <link rel="shortcut icon" href="/logo/AAA.png" type="image/x-icon">
+  <link rel="shortcut icon" href="AAA.png" type="image/x-icon">
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -498,7 +498,7 @@
 </head>
 <body>
   <div class="Enter">
-    <img src="/logo/AAA.png" alt="AAA-Enterprises" />
+    <img src="AAA.png" alt="AAA-Enterprises" />
     <div class="En">
       <h1>AAA POWER ENTERPRISES</h1>
       <h3>Add- Shop No.68, Sattar Auto Garrage, Sant Mary Church Road, Kalina Donger, Santacruz East, Mumbai 400029</h3>
@@ -514,10 +514,10 @@
         <span class="bar"></span>
       </div>
       <ul class="nav-menu">
-        <li class="nav-item"><a href="/Html/index.html" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="/Html/aa.html" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="/Services/service.html" class="nav-link">Services</a></li>
-        <li class="nav-item"><a href="/Html/contactus.html" class="nav-link">Contact</a></li>
+        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="aa.html" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="service.html" class="nav-link">Services</a></li>
+        <li class="nav-item"><a href="contactus.html" class="nav-link">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -537,49 +537,49 @@
       <div class="services-grid">
         <div class="service-card">
           <h4>Painting</h4>
-          <img src="/logo/pa.avif" alt="">
+          <img src="pa.avif" alt="">
           <p>Transforming spaces with professional painting and impeccable results.</p>
         </div>
         <div class="service-card">
           <h4>Wallpaper</h4>
-          <img src="/logo/wall.avif" alt="">
+          <img src="wall.avif" alt="">
           <p>Enhance your space with expert  wallpaper installation.</p>
         </div>
         <div class="service-card">
           <h4>Celing</h4>
-          <img src="/logo/ce.jpg" alt="">
+          <img src="ce.jpg" alt="">
           <p>We Can Convert Your Ceiling By Applying Design On It</p>
         </div>
         <div class="service-card">
           <h4>Furniture</h4>
-          <img src="/logo/furniture.avif" alt="">
+          <img src="furniture.avif" alt="">
           <p>Transform your home with our exquisite furniture, crafted for lasting beauty and comfort</p>
         </div>
       
         <div class="service-card">
           <h4>Home Rewiring</h4>
-          <img src="/logo/homerenovation.jpg" alt="">
+          <img src="homerenovation.jpg" alt="">
           <p>Safe and professional complete rewiring of your property.</p>
         </div>
         <div class="service-card">
           <h4>Lighting Installation</h4>
-          <img src="/logo/light.avif" alt="">
+          <img src="light.avif" alt="">
           <p>Indoor and outdoor lighting solutions for all areas.</p>
         </div>
     
         <div class="service-card">
           <h4>Flooring Installation</h4>
-          <img src="/logo/flo.jpg" alt="">
+          <img src="flo.jpg" alt="">
           <p>Hardwood, tile, and vinyl flooring solutions for every room.</p>
         </div>
         <div class="service-card">
           <h4>Modular Kitchen Setup</h4>
-          <img src="/logo/mk.avif" alt="">
+          <img src="mk.avif" alt="">
           <p>Modern and functional kitchen installations and upgrades.</p>
         </div>
         <div class="service-card">
           <h4>Bathroom Remodeling</h4>
-          <img src="/logo/bm.webp" alt="">
+          <img src="bm.webp" alt="">
           <p>Upgrade your bathroom with new fittings, tiles, and fixtures.</p>
         </div>
       </div>
@@ -590,22 +590,22 @@
       <div class="services-grid">
         <div class="service-card">
           <h4>Roof Repair & Maintenance</h4>
-          <img src="/logo/rf.jpg" alt="">
+          <img src="rf.jpg" alt="">
           <p>Ensure your roof is secure, leak-free, and weather-ready.</p>
         </div>
         <div class="service-card">
           <h4>Garden Landscaping</h4>
-          <img src="/logo/gg.jpg" alt="">
+          <img src="gg.jpg" alt="">
           <p>Create beautiful outdoor spaces with our landscape design team.</p>
         </div>
         <div class="service-card">
           <h4>Wall Cladding & Painting</h4>
-          <img src="/logo/ww.jpg" alt="">
+          <img src="ww.jpg" alt="">
           <p>Protect and beautify exterior walls with high-quality finishes.</p>
         </div>
         <div class="service-card">
           <h4>Driveway & Pathway Paving</h4>
-          <img src="/logo/dd.jpg" alt="">
+          <img src="dd.jpg" alt="">
           <p>Durable and stylish paving for your driveways and walkways.</p>
         </div>
       </div>
@@ -689,10 +689,10 @@
       <div class="footer-col">
         <h3>Quick Links</h3>
         <ul class="footer-links">
-          <li><a href="/Html/index.html">Home</a></li>
-          <li><a href="/Services/service.html">Services</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="service.html">Services</a></li>
+          <li><a href="aa.html">About</a></li>
+          <li><a href="contactus.html">Contact</a></li>
         </ul>
       </div>
 
@@ -720,11 +720,11 @@
           </li>
           <li>
             <i class="fas fa-phone-alt"></i>
-            <span>+91 9594350744</span>
+            <span>+91 95944350744</span>
           </li>
           <li>
             <i class="fas fa-envelope"></i>
-            <span>info@yourcompany.com</span>
+            <span>adeelkhan8062@gmail.com</span>
           </li>
           <li>
             <i class="fas fa-clock"></i>
