--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
         <!-- Diamond Image Grid -->
         <div class="diamond-grid">
           <div class="diamond-img">
-            <img src="/logo/img1.avif" alt="Image 1" />
+            <img src="img1.avif" alt="Image 1" />
           </div>
           <div class="diamond-img">
-            <img src="/logo/img2.webp" alt="Image 2" />
+            <img src="img2.webp" alt="Image 2" />
           </div>
           <div class="diamond-img">
-            <img src="/logo/img3.avif" alt="Image 3" />
+            <img src="img3.avif" alt="Image 3" />
           </div>
           <div class="diamond-img">
-            <img src="/logo/img4.avif" alt="Image 4" />
+            <img src="img4.avif" alt="Image 4" />
           </div>
         </div>
 
