--- a/aa.html
+++ b/aa.html
@@ -354,7 +354,10 @@
             .hero h1 {
                 font-size: 2.5rem;
             }
-            
+            .mission
+            {
+                width:103%;
+            }
             .mission-cards {
                 flex-direction: column;
             }
@@ -821,6 +824,6 @@ font-size: smaller;
         </div>
       </footer>
   
-    <script src="/js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
