--- a/contactus.html
+++ b/contactus.html
@@ -140,6 +140,8 @@
               <li><a href="#">Solar Energy</a></li>
               <li><a href="#">Maintenance</a></li>
               <li><a href="#">Emergency Repairs</a></li>
+                <li><a href="#">Land Developers</a></li>
+            <li><a href="#">ConStructions Works</a></li>
             </ul>
           </div>
   
