--- a/aa.html
+++ b/aa.html
@@ -610,7 +610,7 @@ font-size: smaller;
     <section class="hero">
         <div class="container">
             <h1>Powering Your World with Excellence</h1>
-            <p>For over 15 years, AAA Power Enterprises has been delivering top-tier electrical and maintenance solutions to homes and businesses across the region.</p>
+            <p>For over 15 years, AAA Power Enterprises has been delivering top-tier electrical and maintenance solutions to homes and businesses across the region in India And  Also From 2022 MEP- Mechanical,Electricals And ConStructions Also Started</p>
             <a href="contactus.html" class="btn">Contact Us Today</a>
         </div>
     </section>
