--- a/contactus.html
+++ b/contactus.html
@@ -52,7 +52,7 @@
        <div class="contact-us-inner-section">
         <div class="rightmain1 nonee">
             <div class="rightinner1">
-                <h2>Get a Free Quote</h2>
+                <h2>Request A Service</h2>
                 <form action="https://api.web3forms.com/submit" method="post" class="form">
                     <input type="hidden" name="access_key" value="b037b62a-c3bd-4630-ae0d-6ed5085d46c0">
                     <label for="name">Name*</label>
@@ -61,11 +61,8 @@
                     <input type="number" name="PhoneNumber" class="name" id="phone" required autocomplete="off">
                     <label for="email">Email*</label>
                     <input type="email" name="email" id="email" class="name" required autocomplete="off">
-                    <label for="Movingfrom">Moving From*</label>
+                    <label for="Movingfrom">Description</label>
                     <input type="text" name="Movingfrom" id="from" class="name" required autocomplete="off">
-                    <label for="MovingTo">Moving To*</label>
-                    <input type="text" name="MovingTo" id="to" class="name" required autocomplete="off">
-                    <div class="Line"></div>
                     <button class="btn-sunbit">Submit</button>
                 </form>
             </div>
