--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home - AAA-Enterprises</title>
+    <title>Home - Topper-Enterprises</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -23,7 +23,7 @@
     <div class="Enter">
       <img src="AAA.png" alt="AAA-Enterprises" />
       <div class="En">
-        <h1>AAA POWER ENTERPRISES</h1>
+        <h1>Topper-Enterprises</h1>
         <h3>
           Add- Shop No.68, Sattar Auto Garrage, Sant Mary Church Road, Kalina
           Donger, Santacruz East, Mumbai 400029
@@ -32,7 +32,7 @@
     </div>
     <nav class="navbar">
       <div class="navbar-container">
-        <a href="#" class="logo">AAA POWER <span>ENTERPRISES</span></a>
+        <a href="#" class="logo">Topper-<span>Enterprises</span></a>
 
         <div class="menu-toggle" id="mobile-menu">
           <span class="bar"></span>
@@ -55,9 +55,9 @@
 
     <div class="bg">
       <div>
-        <h1>WELCOME TO AAA POWER ENTERPRISES</h1>
+        <h1>WELCOME TO TOPPER-ENTERPRISES</h1>
         <p>
-          "AAA Power Enterprises: Your trusted partner for reliable electrical,
+          "AAA Topper-Enterprises: Your trusted partner for reliable electrical,
           plumbing and businesses with
           excellence and expertise."
         </p>
