--- a/aa.html
+++ b/aa.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - AAA Power Enterprises</title>
+    <title>About Us - Power Enterprises</title>
     <link rel="shortcut icon" href="AAA.png" type="image/x-icon">
 
     <style>
@@ -576,7 +576,7 @@ font-size: smaller;
          <div class="Enter">
       <img src="AAA.png" alt="AAA-Enterprises" />
       <div class="En">
-        <h1>AAA POWER ENTERPRISES</h1>
+        <h1>POWER ENTERPRISES</h1>
         <h3>
           Add- Shop No.68, Sattar Auto Garrage, Sant Mary Church Road, Kalina
           Donger, Santacruz East, Mumbai 400029
@@ -585,7 +585,7 @@ font-size: smaller;
     </div>
     <nav class="navbar">
       <div class="navbar-container">
-        <a href="#" class="logo">AAA POWER ENTERPRISES</a>
+        <a href="#" class="logo">POWER ENTERPRISES</a>
 
         <div class="menu-toggle" id="mobile-menu">
           <span class="bar"></span>
@@ -661,7 +661,7 @@ font-size: smaller;
                 <div class="team-member">
                     <img src="pp.jpg" alt="John Smith">
                     <div class="member-info">
-                        <h3>Adil Khan</h3>
+                        <h3>Khan Obaid/h3>
                         <p>Founder & CEO</p>
                         <p>Master Electrician with 25+ years experience</p>
                     </div>
@@ -670,7 +670,7 @@ font-size: smaller;
                 <div class="team-member">
                     <img src="pp.jpg" alt="Sarah Johnson">
                     <div class="member-info">
-                        <h3>Afzal Khan</h3>
+                        <h3>Adnan Khan</h3>
                         <p>Operations Director</p>
                         <p>15 years in electrical project management</p>
                     </div>
@@ -679,7 +679,7 @@ font-size: smaller;
                 <div class="team-member">
                     <img src="pp.jpg" alt="Michael Chen">
                     <div class="member-info">
-                        <h3>Arshad khan</h3>
+                        <h3>Affan khan</h3>
                         <p>Technical Supervisor</p>
                         <p>Specialist in industrial power systems</p>
                     </div>
