--- a/aa.html
+++ b/aa.html
@@ -659,9 +659,9 @@ font-size: smaller;
             
             <div class="team-members">
                 <div class="team-member">
-                    <img src="pp.jpg" alt="John Smith">
+                    <img src="DSC_0103.JPG" alt="John Smith">
                     <div class="member-info">
-                        <h3>Khan Obaid/h3>
+                        <h3>Khan Obaid</h3>
                         <p>Founder & CEO</p>
                         <p>Master Electrician with 25+ years experience</p>
                     </div>
