--- a/aa.html
+++ b/aa.html
@@ -183,8 +183,8 @@
         }
         
         .team-member img {
-            width: 100%;
-            height: 250px;
+            width: 79%;
+            height: 300%;
             object-fit: cover;
         }
         
