--- a/aa.html
+++ b/aa.html
@@ -798,17 +798,16 @@ font-size: smaller;
               <li>
                 <i class="fas fa-map-marker-alt"></i>
                 <span>
-                  Add- Shop No.68, Sattar Auto Garrage, Sant Mary Church Road,
-                  Kalina Donger, Santacruz East, Mumbai 400029</span
+                  Add- 31/33 A Akbar Lala Compund Azad Nagar Ghatkopar West Mumbai -400086 Maharashtra India</span
                 >
               </li>
               <li>
                 <i class="fas fa-phone-alt"></i>
-                <span>+91 9594350744</span>
+                <span>+91 9321282475</span>
               </li>
               <li>
                 <i class="fas fa-envelope"></i>
-                <span>info@yourcompany.com</span>
+                <span>khanobaidurrahman91@gmail.com</span>
               </li>
               <li>
                 <i class="fas fa-clock"></i>
