--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactus - AAA Power Enterprises</title>
+    <title>Contactus - Power Enterprises</title>
     <link rel="stylesheet" href="contactus.css">
     <link rel="shortcut icon" href="AAA.png" type="image/x-icon">
     <link
@@ -17,14 +17,14 @@
     <div class="Enter">
         <img src="AAA.png" alt="AAA-Enterprises" />
         <div class="En">
-          <h1>AAA POWER ENTERPRISES</h1>
-          <h3>Add- Shop No.68, Sattar Auto Garrage, Sant Mary Church Road, Kalina Donger, Santacruz East, Mumbai 400029</h3>
+          <h1>POWER ENTERPRISES</h1>
+          <h3>Add-  31/33 A Akbar Lala Compund Azad Nagar Ghatkopar West Mumbai -400086 Maharashtra India</h3>
         </div>
       </div>
     
       <nav class="navbar">
         <div class="navbar-container">
-          <a href="#" class="logo">AAA POWER ENTERPRISES</a>
+          <a href="#" class="logo">\ POWER ENTERPRISES</a>
           <div class="menu-toggle" id="mobile-menu">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -73,17 +73,16 @@
             </div>
             <div class="phone-number-contact-info">
                 <b>Phone Number :</b>
-                <p>9594350744</p>
+                <p>9321282475</p>
             </div>
             <div class="email-contact-info">
                 <b>Email :</b>
                 <p>
-                    adeelkhan8062@gmail.com</p>
+                    khanobaidurrahman91@gmail.com</p>
             </div>
             <div class="Addresss-visit-cnatct-info">
                 <b>Mumbai Address :</b>
-                <p> Add- Shop No.68, Sattar Auto Garrage, Sant Mary Church Road, Kalina
-                    Donger, Santacruz East, Mumbai 400029</p>
+                <p> Add-  31/33 A Akbar Lala Compund Azad Nagar Ghatkopar West Mumbai -400086 Maharashtra India</p>
             </div>
             <div class="about-flex-footer-3">
                 <div class="facebokkk1">
@@ -148,17 +147,16 @@
               <li>
                 <i class="fas fa-map-marker-alt"></i>
                 <span>
-                  Add- Shop No.68, Sattar Auto Garrage, Sant Mary Church Road,
-                  Kalina Donger, Santacruz East, Mumbai 400029</span
+                  Add-  31/33 A Akbar Lala Compund Azad Nagar Ghatkopar West Mumbai -400086 Maharashtra India</span
                 >
               </li>
               <li>
                 <i class="fas fa-phone-alt"></i>
-                <span>+91 9594350744</span>
+                <span>+91 9321282475</span>
               </li>
               <li>
                 <i class="fas fa-envelope"></i>
-                <span>adeelkhan8062@gmail.com</span>
+                <span>khanobaidurrahman91@gmail.com</span>
               </li>
               <li>
                 <i class="fas fa-clock"></i>
@@ -170,7 +168,7 @@
   
         <div class="footer-bottom">
           <p>
-            &copy; AAA POWER ENTERPRISES. All Rights Reserved. | Designed with ❤️
+            &copy; POWER ENTERPRISES. All Rights Reserved. | Designed with ❤️
             by Your Khan Obaid
           </p>
         </div>
